--- a/笔记.md
+++ b/笔记.md
@@ -58,4 +58,16 @@
 
 ​		dotnet MicroService.GatewayDemo.dll --urls="http://*:6299" --ip="127.0.0.1" --port=6299
 
-​	
+### 微服务架构-分布式事务
+
+![image-20210103220212547](C:\Users\86135\AppData\Roaming\Typora\typora-user-images\image-20210103220212547.png)
+
+#### =>
+
+
+
+![image-20210103220301434](C:\Users\86135\AppData\Roaming\Typora\typora-user-images\image-20210103220301434.png)
+
+![image-20210103220955531](C:\Users\86135\AppData\Roaming\Typora\typora-user-images\image-20210103220955531.png)
+
+![image-20210103221012449](C:\Users\86135\AppData\Roaming\Typora\typora-user-images\image-20210103221012449.png)
