--- a/笔记.md
+++ b/笔记.md
@@ -71,3 +71,9 @@
 ![image-20210103220955531](C:\Users\86135\AppData\Roaming\Typora\typora-user-images\image-20210103220955531.png)
 
 ![image-20210103221012449](C:\Users\86135\AppData\Roaming\Typora\typora-user-images\image-20210103221012449.png)
+
+
+
+### Nginx
+
+![image-20210104235750720](C:\Users\86135\AppData\Roaming\Typora\typora-user-images\image-20210104235750720.png)
